change clear log button to inline hyperlink

--- a/DnsTube.Service/ClientApp/index.html
+++ b/DnsTube.Service/ClientApp/index.html
@@ -75,9 +75,8 @@
 					<tbody id="dns-entries-body"></tbody>
 				</table>
 
-				<h4>Log</h4>
-				<button type="button" class="btn btn-outline-primary btn-sm" id="clearLog">Clear
-					Log</button>
+				<h4 style="display:inline-block;">Log</h4>
+				<a href="javascript:" id="clearLog">clear</a>
 				<table id="log-table" class="table">
 					<thead>
 						<tr>
