log load more, UI tweaks

--- a/DnsTube.Service/ClientApp/index.html
+++ b/DnsTube.Service/ClientApp/index.html
@@ -76,7 +76,8 @@
 				</table>
 
 				<h4 style="display:inline-block;">Log</h4>
-				<a href="javascript:" id="clearLog">clear</a>
+
+				<a href="javascript:" id="log-clear">clear</a>
 				<table id="log-table" class="table">
 					<thead>
 						<tr>
@@ -87,6 +88,7 @@
 					</thead>
 					<tbody id="log-table-body"></tbody>
 				</table>
+				<button id="log-load-more" class="btn btn-secondary btn-sm">Load More</button>
 
 			</div>
 
