--- a/DnsTube.Service/ClientApp/index.html
+++ b/DnsTube.Service/ClientApp/index.html
@@ -47,11 +47,17 @@
 						</div>
 					</div>
 					<div class="form-group col">
+						<label for="colFormLabel" class="col-sm-3 col-form-label">Last Update</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="last-update" readonly>
+						</div>
+					</div>
+					<div class="form-group col">
 						<label for="colFormLabel" class="col-sm-3 col-form-label">Next Update</label>
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="next-update" readonly>
 						</div>
-					</div>
+					</div>					
 				</div>
 			</form>
 
