--- a/DnsTube.Service/ClientApp/settings.html
+++ b/DnsTube.Service/ClientApp/settings.html
@@ -16,7 +16,7 @@
 				<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto
 					text-dark text-decoration-none">
 					<!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap" /></svg> -->
-					<span class="fs-4">DnsTube v2.0</span>
+					<span class="fs-2">DnsTube v2.0</span>
 				</a>
 
 				<ul class="nav nav-pills">
@@ -165,8 +165,17 @@
 
 		<div class="container body-content">
 			<hr />
-			<footer>
-				<p>&copy; 2022 - DnsTube</p>
+			<footer style="text-align: center;">
+				<ul class="list-inline">
+					<li class="list-inline-item"><a href="https://github.com/drittich/DnsTube">GitHub</a></li>
+					<li class="list-inline-item"><a
+							href="https://github.com/drittich/DnsTube/blob/main/LICENSE">License</a></li>
+					<li class="list-inline-item"><a
+							href="https://github.com/drittich/DnsTube/releases">Releases</a></li>
+					<li class="list-inline-item"><a
+							href="https://github.com/drittich/DnsTube/issues">Bug Report</a></li>
+					<!-- <li class="list-inline-item"><a href="#">Privacy Policy</a></li> -->
+				</ul>
 			</footer>
 		</div>
 
