--- a/DnsTube.Service/ClientApp/index.html
+++ b/DnsTube.Service/ClientApp/index.html
@@ -67,6 +67,11 @@
 			<h4 style="display:inline-block;">Cloudflare DNS</h4>
 			<a href="javascript:" id="entries-refetch">refetch entries</a>
 
+			<div>
+				<small>Check the DNS entries below that you would like updated with your public IP
+					address</small>
+			</div>
+
 			<div id="dns-entries-spinner" class="position-relative my-5 d-none">
 				<div class="dot-elastic position-absolute
 					top-0 start-50 translate-middle"></div>
