--- a/DnsTube.Service/ClientApp/index.html
+++ b/DnsTube.Service/ClientApp/index.html
@@ -47,14 +47,14 @@
 						</div>
 					</div>
 					<div class="form-group col">
-						<label for="colFormLabel" class="col-sm-3 col-form-label">Last Update</label>
+						<label for="colFormLabel" class="col-sm-3 col-form-label">Last DNS Update</label>
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="last-update" readonly>
 						</div>
 					</div>
 					<div class="form-group col">
-						<label for="colFormLabel" class="col-sm-3 col-form-label">Next Update</label>
-						<a href="javascript:" id="dns-update">update DNS now</a>
+						<label for="colFormLabel" class="col-sm-3 col-form-label">Next DNS Update</label>
+						<a href="javascript:" id="dns-update">update now</a>
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="next-update" readonly>
 
