--- a/DnsTube.Service/ClientApp/index.html
+++ b/DnsTube.Service/ClientApp/index.html
@@ -34,27 +34,27 @@
 			<form class="mb-3">
 				<div class="row">
 					<div class="form-group col d-none" id="public-ipv4-info">
-						<label for="colFormLabel" class="col-sm-4 col-form-label">Public IPv4</label>
+						<label for="colFormLabel" class="col-sm-10 col-form-label">Public IPv4</label>
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="public-ipv4" readonly>
 						</div>
 					</div>
 					<div class="form-group col d-none" id="public-ipv6-info">
-						<label for="colFormLabel" class="col-sm-4 col-form-label">Public IPv6</label>
+						<label for="colFormLabel" class="col-sm-10 col-form-label">Public IPv6</label>
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="public-ipv6" readonly
 								value="">
 						</div>
 					</div>
 					<div class="form-group col">
-						<label for="colFormLabel" class="col-sm-4 col-form-label">Last DNS Update</label>
+						<label for="colFormLabel" class="col-sm-10 col-form-label">Last Update</label>
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="last-update" readonly>
 						</div>
 					</div>
 					<div class="form-group col">
-						<label for="colFormLabel" class="col-sm-4 col-form-label">Next DNS Update</label>
-						<a href="javascript:" id="dns-update">update now</a>
+						<label for="colFormLabel" class="col-sm-10 col-form-label">Next Update &nbsp;<small><a href="javascript:" id="dns-update">update now</a></small></label>
+						
 						<div class="col-sm-10">
 							<input type="text" class="form-control" id="next-update" readonly>
 
@@ -64,8 +64,8 @@
 				</div>
 			</form>
 
-			<h4 style="display:inline-block;">Cloudflare DNS</h4>
-			<a href="javascript:" id="entries-refetch">refetch entries</a>
+			<h4 style="display:inline-block;">Cloudflare DNS Entries</h4>
+			<small><a href="javascript:" id="entries-refetch">refetch</a></small>
 
 			<div>
 				<small>Check the DNS entries below that you would like updated with your public IP
@@ -91,7 +91,7 @@
 			</table>
 
 			<h4 style="display:inline-block;">Log</h4>
-			<a href="javascript:" id="log-clear">clear</a>
+			<small><a href="javascript:" id="log-clear">clear</a></small>
 
 			<table id="log-table" class="table">
 				<thead>
