--- a/DnsTube.Service/ClientApp/settings.html
+++ b/DnsTube.Service/ClientApp/settings.html
@@ -11,18 +11,15 @@
 	</head>
 	<body>
 		<div class="container">
-			<header class="d-flex flex-wrap justify-content-center py-3 mb-4
-				border-bottom">
-				<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto
-					text-dark text-decoration-none">
-					<!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap" /></svg> -->
-					<span class="fs-2">DnsTube v2.0</span>
+			<header class="">
+				<a href="/" class="">
+					<span class="">DnsTube v2.0</span>
 				</a>
 
 				<ul class="nav nav-pills">
-					<li class="nav-item"><a href="/index.html" class="nav-link"
+					<li class=""><a href="/index.html" class=""
 							aria-current="page">Home</a></li>
-					<li class="nav-item"><a href="/settings.html" class="nav-link active">Settings</a></li>
+					<li class=""><a href="/settings.html" class="">Settings</a></li>
 				</ul>
 			</header>
 		</div>
@@ -36,7 +33,7 @@
 				</style>
 			<h4>Settings</h4>
 
-			<div class="alert alert-secondary" role="alert">
+			<div class="" role="alert">
 				To get a Cloudflare API token see <a
 					href="https://developers.cloudflare.com/fundamentals/api/get-started/create-token/"
 					target="_blank">Create an API token</a>
@@ -45,112 +42,113 @@
 			<div>
 
 				<form id="settings">
-					<div class="form-group row">
-						<label for="email" class="col-sm-2 col-form-label">Email</label>
-						<div class="col-6">
-							<input type="email" class="form-control" name="EmailAddress"
+					<div class="">
+						<label for="email" class="">Email</label>
+						<div class="">
+							<input type="email" class="" name="EmailAddress"
 								id="emailAddress">
 						</div>
 					</div>
 
-					<div class="form-group row">
-						<label for="apiToken" class="col-sm-2 col-form-label">Authorization Type</label>
-						<div class="col-sm-10" style="padding-top:8px;">
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="IsUsingToken"
+					<div class="">
+						<label for="apiToken" class="">Authorization Type</label>
+						<div class="" style="padding-top:8px;">
+							<div class="">
+								<input class="" type="radio" name="IsUsingToken"
 									id="authorizationKey" value="false">
-								<label class="form-check-label" for="authorizationKey">
+								<label class="" for="authorizationKey">
 									Use key
 								</label>
 							</div>
-							<div class="form-check form-check-inline align-bottom">
-								<input class="form-check-input" type="radio" name="IsUsingToken"
+							<div class="">
+								<input class="" type="radio" name="IsUsingToken"
 									id="authorizationToken" value="true">
-								<label class="form-check-label" for="authorizationToken">
+								<label class="" for="authorizationToken">
 									Use token
 								</label>
 							</div>
 						</div>
 					</div>
 
-					<div class="form-group row">
+					<div class="">
 						<label for="apiKeyOrToken" id="apiKeyTokenLabel" class="col-sm-2
 							col-form-label">Authorization Key/Token</label>
-						<div class="col-6">
-							<input type="password" class="form-control" name="ApiKeyOrToken"
+						<div class="">
+							<input type="password" class="" name="ApiKeyOrToken"
 								id="apiKeyOrToken" style="display:inline-block">
+							<!-- FIXME: replace with FontAwesome icon? -->
 							<i class="bi-eye" id="togglePassword" style="margin-left: -30px;
 								cursor: pointer;"></i>
 						</div>
 					</div>
 
-					<div class="form-group row">
-						<label for="zoneIDs" class="col-sm-2 col-form-label">Zone IDs</label>
-						<div class="col-6">
-							<input type="text" class="form-control" name="ZoneIDs" id="zoneIDs">
+					<div class="">
+						<label for="zoneIDs" class="">Zone IDs</label>
+						<div class="">
+							<input type="text" class="" name="ZoneIDs" id="zoneIDs">
 						</div>
 					</div>
 
-					<div class="form-group row">
-						<label for="apiToken" class="col-sm-2 col-form-label">Protocol</label>
+					<div class="">
+						<label for="apiToken" class="">Protocol</label>
 						<div class="col-sm-10" style="padding-top:8px;">
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="ProtocolSupport"
+							<div class="">
+								<input class="" type="radio" name="ProtocolSupport"
 									id="protocolIpv4" value="0">
-								<label class="form-check-label" for="protocolIpv4">
+								<label class="" for="protocolIpv4">
 									IPv4
 								</label>
 							</div>
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="ProtocolSupport"
+							<div class="">
+								<input class="" type="radio" name="ProtocolSupport"
 									id="protocolIpv6" value="1">
-								<label class="form-check-label" for="protocolIpv6">
+								<label class="" for="protocolIpv6">
 									IPv6
 								</label>
 							</div>
-							<div class="form-check form-check-inline">
-								<input class="form-check-input" type="radio" name="ProtocolSupport"
+							<div class="">
+								<input class="" type="radio" name="ProtocolSupport"
 									id="protocolBoth" value="2">
-								<label class="form-check-label" for="protocolBoth">
+								<label class="" for="protocolBoth">
 									Both
 								</label>
 							</div>
 						</div>
 					</div>
 
-					<div class="form-group row">
-						<label for="ipv4Api" class="col-sm-2 col-form-label">IPv4 API</label>
-						<div class="col-6">
-							<input type="url" class="form-control" name="Ipv4_API" id="ipv4Api">
+					<div class="">
+						<label for="ipv4Api" class="">IPv4 API</label>
+						<div class="">
+							<input type="url" class="" name="Ipv4_API" id="ipv4Api">
 						</div>
 					</div>
-					<div class="form-group row">
-						<label for="ipv6Api" class="col-sm-2 col-form-label">IPv6 API</label>
-						<div class="col-6">
-							<input type="url" class="form-control" name="Ipv6_API" id="ipv6Api">
+					<div class="">
+						<label for="ipv6Api" class="">IPv6 API</label>
+						<div class="">
+							<input type="url" class="" name="Ipv6_API" id="ipv6Api">
 						</div>
 					</div>
-					<div class="form-group row">
-						<label for="updateIntervalMinutes" class="col-sm-2 col-form-label">Update
+					<div class="">
+						<label for="updateIntervalMinutes" class="">Update
 							Interval</label>
-						<div class="col-2">
-							<input type="number" class="form-control" name="UpdateIntervalMinutes"
+						<div class="">
+							<input type="number" class="" name="UpdateIntervalMinutes"
 								id="updateIntervalMinutes" value="30">
 						</div>
-						<label class="col-sm-2 col-form-label">(minutes)</label>
+						<label class="">(minutes)</label>
 					</div>
-					<div class="form-group row">
-						<label for="ipv6Api" class="col-sm-2 col-form-label"></label>
-						<div class="form-check form-check-inline" style="margin-left:14px;">
-							<input class="form-check-input" type="checkbox" name="NotifyOfUpdates"
+					<div class="">
+						<label for="ipv6Api" class=""></label>
+						<div class="" style="margin-left:14px;">
+							<input class="" type="checkbox" name="NotifyOfUpdates"
 								id="notifyOfUpdates" value="true">
-							<label class="form-check-label" for="notifyOfUpdates">Check for DnsTube
+							<label class="" for="notifyOfUpdates">Check for DnsTube
 								updates</label>
 						</div>
 					</div>
 
-					<div class="form-group row" style="margin-top: 24px;">
-						<div class="d-grid gap-2 d-md-block">
+					<div class="" style="margin-top: 24px;">
+						<div class="">
 							<button type="button" class="btn btn-primary" id="saveSettings">Save</button>
 						</div>
 					</div>
@@ -166,15 +164,15 @@
 		<div class="container body-content">
 			<hr />
 			<footer style="text-align: center;">
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="https://github.com/drittich/DnsTube">GitHub</a></li>
-					<li class="list-inline-item"><a
+				<ul class="">
+					<li class=""><a href="https://github.com/drittich/DnsTube">GitHub</a></li>
+					<li class=""><a
 							href="https://github.com/drittich/DnsTube/blob/main/LICENSE">License</a></li>
-					<li class="list-inline-item"><a
+					<li class=""><a
 							href="https://github.com/drittich/DnsTube/releases">Releases</a></li>
-					<li class="list-inline-item"><a
+					<li class=""><a
 							href="https://github.com/drittich/DnsTube/issues">Bug Report</a></li>
-					<!-- <li class="list-inline-item"><a href="#">Privacy Policy</a></li> -->
+					<!-- <li class=""><a href="#">Privacy Policy</a></li> -->
 				</ul>
 			</footer>
 		</div>
